src/test/ui/borrowck/borrowck-while-break.stderr
error[E0381]: borrow of possibly-uninitialized variable: `v`
  --> $DIR/borrowck-while-break.rs:7:20
   |
LL |     println!("{}", v);
   |                    ^ use of possibly-uninitialized `v`
   |
   = note: this error originates in the macro `$crate::format_args_nl` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
